Wed Oct 24 05:41:18 2012  Koichi Sasada  <ko1@atdot.net>

	* eval_error.c (error_print), vm_eval.c (eval_string_with_cref),
	  vm_trace.c (rb_suppress_tracing): use TH_PUSH_TAG() instead of
	  PUSH_TAG().

Wed Oct 24 05:17:52 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (vm_call0_body): remove RUBY_VM_CHECK_INTS()
	  after method invocation using rb_call0().

	* vm_eval.c (vm_call0_body): remove default section on top of
	  switch statement and add cases for `VM_METHOD_TYPE_CFUNC_FRAMELESS'
	  and `VM_METHOD_TYPE_UNDEF'.

	* vm_eval.c (vm_call0_body): remove useless brackets.

Tue Oct 23 22:34:49 2012  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_raise_m):  check interrupts after Thread#raise
	  if a target thread is the current thread because the behavior
	  of Thread.current.raise is expected to perform same as
	  Kernel.raise (by rubyspec).

Tue Oct 23 17:08:39 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (usage, process_options): show more info in --help.
	  [EXPREIMENTAL] [ruby-core:48072] [Bug #7184]

Tue Oct 23 14:20:43 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-electric.el using variable `last-command-event' instead of
	  obsolete `last-command-char', so that work with Emacs trunk.
	  a patch by Victor Deryagin <vderyagin AT gmail.com>.

Tue Oct 23 14:06:47 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (visibility_option): visibility attribute is not
	  available before GCC 4, so do not use -fvisibility option in that
	  case.  [ruby-core:48147] [Bug #7205]

Tue Oct 23 12:57:29 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, vm_insnhelper.c, vm_eval.c (OPT_CALL_CFUNC_WITHOUT_FRAME):
	  add a new optimization and its macro `OPT_CALL_CFUNC_WITHOUT_FRAME'.
	  This optimization makes all cfunc method calls `frameless', which
	  is faster than ordinal cfunc method call.
	  If `frame' is needed (for example, it calls another method with
	  `rb_funcall()'), then build a frame. In other words, this